# open-smart

./: .gitignore  README.md  progress.md  pyproject.toml
src/open_smart/: __init__.py  acoustics.py  analyzer.py  app.py  audio_io.py  capture.py  delay.py  mtw.py  ring_buffer.py  signals.py  transfer.py
tests/: test_capture_and_signals.py  test_dsp.py  test_ring_buffer.py
