[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-smart"
version = "0.1.0"
description = "Real-time dual-channel acoustic transfer function analyzer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sounddevice>=0.4.6",
    "PySide6>=6.5",
    "pyqtgraph>=0.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
open-smart = "open_smart.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
